# VisionVoice

./: README.md  main.py  pyproject.toml  requirements.txt
detect/: Object_Detection_Yolo.ipynb  detection.py  test.py
detect/src/: loadweights.py  nmsupress.py  process.py  setting.py  utili.py
src/: nmsupress.py
tts/: __init__.py  main.py
